deployment-apicompra-cambio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cambio-apicompra-deployment
  labels:
    app: cambio-apicompra
spec:
  template:
    metadata:
      name: cambio-apicompra-pod
      labels:
        app: cambio-apicompra
    spec:
      containers:
        - name: cambio-apicompra-container
          image: registry-itau.mastertech.com.br/cambio-apicompra-image
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: regcred
  replicas: 2
  selector:
    matchLabels:
      app: cambio-apicompra
