service-apicompra-cambio.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cambio-apicompra
  name: cambio-apicompra-service
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: cambio-apicompra
  type: NodePort
