ingress-apicompra-cambio.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cambio-apicompra-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /cambio/compra(/|$)(.*)
            backend:
              serviceName: cambio-apicompra-service
              servicePort: 8080
